<resources>
    <string name="app_name">THP101G2-Android-School</string>
    <string name="back">返回</string>
    <string name="text_com_input_title">請輸入標題 ...</string>
    <string name="text_com_input_content">請輸入內容 ...</string>
    <string name="txtIamStudent">我是學生</string>
    <string name="txtIamFirm">我是廠商</string>
    <string name="txtEmail">請輸入信箱</string>
    <string name="tvEmail">Email</string>
    <string name="tvPassword">密碼</string>
    <string name="tvUsername">使用者名稱</string>
    <string name="txtPassword">請輸入密碼</string>
    <string name="txtUsername">請輸入使用者名稱</string>
    <string name="btLogin">登入</string>
    <string name="btRegister">註冊</string>
    <string name="btForgetPassword">忘記密碼?</string>
    <string name="txtLogin">登入</string>
    <string name="txtSSO">使用以下帳號登入</string>
    <string name="txtRegister">註冊</string>
    <string name="tvConPassword">確認密碼</string>
    <string name="txtConPassword">請再次輸入密碼</string>
    <string name="txtPhoneDescribe">請輸入您的手機號碼，我們將寄送驗證碼至您的手機</string>
    <string name="txtPhone">請輸入手機號碼</string>
    <string name="tvPhone">手機號碼</string>
    <string name="btGetCAPTCHA">獲取驗證碼</string>
    <string name="txtVerificationDescribe">驗證碼已傳送至</string>
    <string name="tvVerification">驗證碼</string>
    <string name="txtVerification">請輸入驗證碼</string>
    <string name="btSubmit">確認</string>
    <string name="txtResent">重發驗證碼</string>
    <string name="tvValidityPeriod1">驗證碼在</string>
    <string name="txtValidityPeriod2">秒內有效</string>
    <string name="txtForgetPasswordDescribe">請輸入您的註冊的電子信箱，將發送驗證碼至您註冊的手機號碼，以重新設定密碼</string>
    <string name="txtForgetPassword">忘記密碼</string>
    <string name="txtRemberPW">記得密碼?</string>
    <string name="txtChangePW">更改密碼</string>
    <string name="txtChangePWDescribe">請牢記您的密碼</string>
    <string name="tvNewPW">新密碼</string>
    <string name="tvConNewPW">確認新密碼</string>
    <string name="tvAddSchedule">新增任務</string>
    <string name="tvTask">任務</string>
    <string name="txtTask">任務名稱</string>
    <string name="tvTag">標籤</string>
    <string name="txtTag">選擇標籤</string>
    <string name="tvDate">日期</string>
    <string name="txtDate">選擇日期</string>
    <string name="tvStartTime">開始時間</string>
    <string name="txtStartTime">選擇開始時間</string>
    <string name="tvEndTime">結束時間</string>
    <string name="txtEndTime">選擇結束時間</string>
    <string name="tvRepeat">重複</string>
    <string name="tvRemind">提醒</string>
    <string name="btAdd">新增</string>
    <string name="ShopBack">返回</string>
    <string name="ShopFav">加入我的最愛</string>
    <string name="ShopCar">加入購物車</string>
    <string name="textCourseName">搜尋課程</string>
    <string name="txtManageMember">會員管理</string>
    <string name="txtManageClass">課程管理</string>
    <string name="txtManageFirm">商城管理</string>
    <string name="txtManageCom">社群管理</string>
    <string name="txtManageMa">管理員系統</string>
    <string name="txtManageReport">檢舉管理</string>
    <string name="txtManage">主頁</string>
    <string name="textClassName">請輸入要找的課程ID</string>
    <string name="txtAddFavorite">加入我的最愛</string>
    <string name="txtAddCourse">加入我的課程</string>
    <string name="btUnblock">解除封鎖</string>
    <string name="txtDeleteOrNot">確定要刪除嗎？</string>
    <string name="txtSureDelete">確定刪除</string>
    <string name="txtCancel">取消</string>
    <string name="txtUploadChoice">上傳照片</string>
    <string name="txtProfilePic">頭貼</string>
    <string name="txtCoverPho">封面</string>
    <string name="tvUserID">使用者ID</string>
    <string name="txtUserID">請輸入使用者ID</string>
    <string name="tvIntroduction">簡介</string>
    <string name="txtIntroduction">請輸入簡介</string>
    <string name="btAddPic">新增照片</string>
    <string name="tvIdentity">身分</string>
    <string name="txtNewPW">請輸入新密碼</string>
    <string name="tvOldPW">目前密碼</string>
    <string name="txtOldPW">請輸入目前密碼</string>
    <string name="tvAccountSetting">帳號設定</string>
    <string name="tvNotificationSetting">通知設定</string>
    <string name="tvEditPW">修改密碼</string>
    <string name="tvApplyToTeacher">申請教師</string>
    <string name="btLogout">登出</string>
    <string name="tvAcceptNotification">接收訊息通知</string>
    <string name="tvLikeNotification">點讚通知</string>
    <string name="tvCommentNotification">留言通知</string>
    <string name="tvKanbanNotification">看板更新通知</string>
    <string name="tvBeTaggedNotification">標記通知</string>
    <string name="tvSaleNotification">購物及售後通知</string>
    <string name="tvCommunicationNotification">社群通知</string>
    <string name="tvShopNotification">商城通知</string>
    <string name="tvReason">原因</string>
    <string name="txtReason">為什麼想成為教師呢？</string>
    <string name="tvPost">貼文</string>
    <string name="btEdit">編輯資料</string>
    <string name="tvMyCourse">我的課程</string>
    <string name="tvMyFavorite">我的最愛</string>
    <string name="tvMyPoint">我的積分</string>
    <string name="tvMyClassroom">我的教室</string>
    <string name="tvTeacherCourse">我的課程</string>
    <string name="tvBlackList">封鎖名單</string>
    <string name="tvSettings">帳號設定</string>
    <string name="tvContactCS">聯絡客服</string>
    <string name="btHaveAccount">已有帳號</string>
    <string name="txtHaveAccount">已有帳號？</string>
    <string name="txtOpen">開</string>
    <string name="txtClose">關</string>
    <string name="tvTagHotPink">HotPink</string>
    <string name="tvTagRose">Rose</string>
    <string name="tvTagHeliotrope">Heliotrope</string>
    <string name="tvTagPalatinateBlue">PalatinateBlue</string>
    <string name="tvTagNeonBlue">NeonBlue</string>
    <string name="tvTagSkyBlue">SkyBlue</string>
    <string name="tvTagTurquoise">Turquoise</string>
    <string name="tvTagLightGreen">LightGreen</string>
    <string name="tvTagMustard">Mustard</string>
    <string name="tvChoseTag">選擇標籤</string>
    <string name="txtNotification">通知</string>
    <string name="txtProductName">請輸入商品名稱</string>
    <string name="txtFirmName">咋啦弟弟商場</string>
    <string name="txtFirmInfo">大家好，我是經營咋啦弟弟商場的弟弟商場，這裡 主要販售教科書，以及文具類商品。 請大家多多支持!!!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtProductSum">總覽</string>
    <string name="txtProductOn">已上架</string>
    <string name="txtProductOff">已下架</string>
    <string name="txtProductOffed">被下架</string>
    <string name="txtFirmSignOut">登出</string>
    <string name="txtFirmShopSetting">賣場設定</string>
    <string name="txtFirmSetting">會員設定</string>
    <string name="txtFirmFixedPassword">修改密碼</string>
    <string name="txtFirmShopName">賣家名稱</string>
    <string name="txtFirmShopIcon">頭像</string>
    <string name="txtFirmDataEdit">確定編輯</string>
    <string name="txtFirmUserName">使用者名稱</string>
    <string name="txtFirmEmail">信箱</string>
    <string name="txtFirmPhone">手機</string>
    <string name="txtFirmOldPassword">目前密碼</string>
    <string name="txtFirmNewPassword">新密碼</string>
    <string name="txtFirmConfirmPassword">確認新密碼</string>
    <string name="txtFirmInputOldPassword">請輸入目前密碼</string>
    <string name="txtFirmInputNewPassword">請輸入新的密碼</string>
    <string name="txtFirmInputNewPasswordAgain">請再次輸入新密碼</string>
    <string name="txtPasswordLimit">密碼設定長度為8到12個字元的字串</string>
    <string name="txtFirmPasswordFixed">確定修改密碼</string>
    <string name="txtNotShip">未出貨</string>
    <string name="txtShipped">已出貨</string>
    <string name="txtFirmBackGround">頁首圖片</string>
    <string name="txtFirmShopInfo">賣場簡介</string>
    <string name="txtFirmProductEdit">編輯商品</string>
    <string name="txtFirmCancelEdit">取消編輯</string>
    <string name="txtFirmConEdit">確定編輯</string>
    <string name="txtFirmProductOff">下架商品</string>
    <string name="txtFirmEditProductName">商品名稱:</string>
    <string name="txtFirmEditProductPrice">定價:</string>
    <string name="txtFirmEditProductClass">分類:</string>
    <string name="txtFirmEditProductTag">標籤:</string>
    <string name="txtFirmEditProductInfo">商品簡介:</string>
    <string name="txtFirmEditProductPicture">編輯圖片</string>
    <string name="txtFirmCancelOn">取消上架</string>
    <string name="txtFirmConOn">確定上架</string>
    <string name="text_com_submitpost">送出文章</string>
    <string name="text_com_chooselabels">選擇文章標籤</string>
    <string name="text_com_content">請輸入回覆內容</string>
    <string name="textNothingSelected">請選擇章節</string>
    <string name="text_com_editpost">編輯文章</string>
    <string name="text_com_nofollow">尚未追蹤任何看板唷！</string>
    <string name="btEditTag">編輯標籤</string>
    <string name="tvNickname">暱稱</string>
    <string name="txtNickname">請輸入暱稱</string>
    <string name="txtFans">粉絲</string>
    <string name="txtFollowing">追蹤中</string>
    <string name="btChangePic">更新照片</string>
    <string name="txtPicQuestion">要更改哪個照片呢?</string>
    <string name="txtProfilePhoto">頭像</string>
    <string name="txtCoverPicture">封面</string>
    <string name="manageMember">會員管理</string>
    <string name="manageClass">課程管理</string>
    <string name="manageHome">主頁</string>
    <string name="manageFirm">商城管理</string>
    <string name="manageCom">社群管理</string>
    <string name="txtComName">請輸入要搜尋的貼文ID</string>
    <string name="txtProcessed">已處理</string>
    <string name="memberProcessed">已處理</string>
    <string name="txtUnprocessed">未處理</string>
    <string name="txtprintid">請輸入...</string>
    <string name="btDelete">刪除</string>
    <string name="btFollow">追蹤</string>
    <string name="txtFavDelete">從我的最愛移除</string>
    <string name="txtStartCourse">開始上課</string>
    <string name="txtMyDelete">從我的課程移除</string>
    <string name="txtFollow">追蹤</string>
    <string name="txtIamManager">我是管理員</string>
    <string name="etManageAc">請輸入帳號</string>
    <string name="txtManageAc">帳號</string>
    <string name="txtFirmProductCount">商品數量</string>
    <string name="txtProductOnSuccessful">商品上架成功</string>
    <string name="txtHProductName">請輸入商品名稱</string>
    <string name="txtHProductPrice">請輸入商品價格</string>
    <string name="txtHProductCount">請輸入商品數量</string>
    <string name="txtHShopName">請輸入廠商名稱</string>
    <string name="txtHProductClass">請輸入商品分類</string>
    <string name="txtHProductTag">請輸入商品標籤</string>
    <string name="txtHProductInfo">請輸入商品簡介</string>
    <string name="textComAuthError">輸入的驗證碼錯誤！</string>
    <string name="textComAuthFailed">認證錯誤！</string>
    <string name="textComAuthNeeded">尚未進行電話認證！認證後才可以發表文章</string>
    <string name="textComAuthGo">前往驗證</string>
    <string name="textConfirmPay">確認付款</string>
    <string name="textCannotUseGPay">Cannot use Google Pay</string>
    <string name="textCanceled">Canceled by the user.</string>
    <string name="textNoNetwork">no network connection available</string>
    <string name="textPaymentSuccess">Payment is successful</string>

    <string name="TapPay_AppID">132400</string>
    <string name="TapPay_AppKey">app_khpYmGtvLMNRwL50YuTQqCXSoSHqQdbDIShYfSUoseX5pGYiz4wIoNIHGBj8</string>

    <!-- 公司資訊 / 帳號金鑰 -->
    <string name="TapPay_PartnerKey">partner_9Y1yEpLHaZ6zkbkgV0aPhT1VcfHCdYxxFMZCyPG0OkF8a4xjPG0oaBBy</string>

    <!-- 商家管理 / 商家設置 / 收單銀行 -->
    <string name="TapPay_MerchantName">TW_TAISHIN</string>
    <!-- 商家管理 / 商家設置 / Merchant ID -->
    <string name="TapPay_MerchantID">softfat_TAISHIN</string>
    <string name="prefix">0</string>
    <string name="etName">請輸入姓名</string>
    <string name="etAccount">請輸入帳號</string>
    <string name="etPassword">請輸入密碼</string>
    <string name="etManagerName">管理者姓名</string>
</resources>