<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheetAdd"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_bg"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginBottom="16dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/ic_baseline_remove_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="left|center_vertical"
            app:srcCompat="@drawable/ic_outline_cancel_24" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="24dp"
            android:layout_weight="1"
            android:text="@string/tvAddSchedule"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTask"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/tvTask" />

                <EditText
                    android:id="@+id/etTask"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/txtTask"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTag"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/tvTag" />

                <EditText
                    android:id="@+id/etTag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/txtTag"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/tvDate" />

                <EditText
                    android:id="@+id/etDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/txtDate"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvStartTime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/tvStartTime" />

                <EditText
                    android:id="@+id/etStartTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/txtStartTime"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvEndTime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/tvEndTime" />

                <EditText
                    android:id="@+id/etEndTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/txtEndTime"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvRepeat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/tvRepeat" />

                <Spinner
                    android:id="@+id/Repeat"
                    android:layout_width="120dp"
                    android:layout_height="48dp"
                    android:entries="@array/repeatPattern" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvRemind"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/tvRemind" />

                <Spinner
                    android:id="@+id/Remind"
                    android:layout_width="120dp"
                    android:layout_height="48dp"
                    android:entries="@array/remindType" />
            </LinearLayout>

            <Button
                android:id="@+id/btAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_primary"
                android:text="@string/btAdd"
                android:textSize="20sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>