<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".member.controller.ForgetPasswordFragment" >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvForgetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="8dp"
            android:text="@string/txtForgetPassword"
            android:textColor="@color/purple_400"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvForgetPasswordDescribe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/txtForgetPasswordDescribe"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvVerification"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/tvEmail" />

                <EditText
                    android:id="@+id/etVerification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/txtEmail"
                    android:inputType="none|number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:text="@string/txtRemberPW"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tvSmallLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtLogin"
                    android:textColor="@color/purple_400"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_primary"
            android:text="@string/btSubmit"
            app:backgroundTint="@null" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>