<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".member.controller.changePasswordFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:padding="16dp">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            app:srcCompat="@drawable/ic_arrow_back_24" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvForgetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/txtChangePW"
            android:textColor="@color/purple_400"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvForgetPasswordDescribe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/txtChangePWDescribe"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvNewPW"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/tvNewPW" />

                <EditText
                    android:id="@+id/etNewPW"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/txtPassword"
                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvConNewPW"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/tvConNewPW" />

                <EditText
                    android:id="@+id/etConNewPW"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/txtConPassword"
                    android:inputType="textPassword" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_primary"
            android:text="@string/btSubmit"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@null" />

    </LinearLayout>
</LinearLayout>